--- a/demo-vue/package.json
+++ b/demo-vue/package.json
@@ -12,7 +12,8 @@
     "autoprefixer": "^10.4.13",
     "cypress": "^12.4.1",
     "postcss": "^8.4.21",
-    "vue": "^3.2.45"
+    "vue": "^3.2.45",
+    "vuetify": "^3.1.3"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
