--- a/demo-vue/tsconfig.json
+++ b/demo-vue/tsconfig.json
@@ -14,6 +14,6 @@
     "types": ["cypress"],
     "noEmit": true
   },
-  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
+  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue", "cypress/**/*.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
