--- a/demo-vue/package.json
+++ b/demo-vue/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "autoprefixer": "^10.4.13",
     "cypress": "^12.4.1",
+    "pinia": "^2.0.30",
     "postcss": "^8.4.21",
     "vue": "^3.2.45",
     "vuetify": "^3.1.3"
