--- a/demo-vue/package.json
+++ b/demo-vue/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "cypress open --component --browser chrome"
   },
   "dependencies": {
     "autoprefixer": "^10.4.13",
@@ -14,6 +15,7 @@
     "pinia": "^2.0.30",
     "postcss": "^8.4.21",
     "vue": "^3.2.45",
+    "vue-router": "^4.1.6",
     "vuetify": "^3.1.3"
   },
   "devDependencies": {
